# rm_rune

./: .gitignore  README.md
at_vision_simulator/: .gitignore  Cargo.toml  RAMBLE.md  README.md  build.sh
at_vision_simulator/src/: dataset.rs  handler.rs  main.rs  robomaster.rs  ros2.rs  statistic.rs  util.rs
at_vision_simulator/src/robomaster/: power_rune.rs  visibility.rs
at_vision_simulator/src/ros2/: capture.rs  cmd.rs  plugin.rs  topic.rs
at_vision_simulator/src/util/: bevy.rs  image.rs  sync.rs
fyt_sp_main/: CMakeLists.txt  README.md  autostart.sh  engine_info.txt  readme_1.md
fyt_sp_main/.marscode/: deviceInfo.json
fyt_sp_main/assets/: tiny_resnet.engine
fyt_sp_main/calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  capture_gimbal.cpp
fyt_sp_main/configs/: calibration.yaml  camera.yaml  camera_info.yaml  demo.yaml  handeye.yaml  sentry.yaml  sim_buff.yaml  standard3.yaml  standard4.yaml  uav.yaml
fyt_sp_main/install/: local_setup.sh  setup.sh
fyt_sp_main/io/: CMakeLists.txt  camera.cpp  ros2camera.cpp  ros2camera.hpp  simboard.cpp  simboard.hpp
fyt_sp_main/io/daheng/: daheng.cpp  daheng.hpp
fyt_sp_main/io/daheng/lib/armv8/: GxGVTL.cti  GxU3VTL.cti
fyt_sp_main/io/gimbal/: gimbal.cpp
fyt_sp_main/io/mindvision/: mindvision.cpp
fyt_sp_main/io/ros2/: time_sync.hpp
fyt_sp_main/log/: latest_build
fyt_sp_main/src/: auto_buff_debug_view.cpp  auto_buff_sim.cpp
fyt_sp_main/tasks/auto_aim/: CMakeLists.txt  classifier.cpp  classifier.hpp  detector.cpp  solver.cpp  yolo.cpp  yolo.hpp
fyt_sp_main/tasks/auto_aim/multithread/: mt_detector.cpp  mt_detector.hpp
fyt_sp_main/tasks/auto_aim/yolos/: trt_logger.hpp  trt_utils.hpp  yolov5.cu  yolov5.cu.bak  yolov5.hpp  yolov8.cpp
fyt_sp_main/tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp  buff_aimer.hpp  buff_detector.cpp  buff_detector.hpp  buff_solver.cpp  buff_solver.hpp  buff_target.cpp  buff_target.hpp  buff_type.cpp  buff_type.hpp  trt_logger.hpp  trt_utils.hpp  yolox_buff.cu  yolox_buff.hpp
fyt_sp_main/tasks/omniperception/: CMakeLists.txt
fyt_sp_main/tests/: My_gimbal_test.cpp  auto_aim_camera_test.cpp  auto_aim_mutithread.cpp  auto_aim_mycamera_test.cpp  auto_aim_test.cpp  auto_aim_test_2.cpp  auto_aim_test_all.cpp  auto_buff_test.cpp  camera_detect_test.cpp  camera_test.cpp  handeye_test.cpp  minimum_vision_system.cpp  sim_gimbal_sine_test.cpp  sim_gimbal_step_test.cpp  vision_system.cpp
fyt_sp_main/tools/: crc.cpp  thread_pool.hpp  thread_safe_queue.hpp  yaml.hpp
