[package]
name = "daedalus"
version = "0.1.0"
edition = "2024"
default-run = "daedalus"

[dependencies]
bevy = { version = "0.17.2", features = [ "std",
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "jpeg",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "x11",
    "wayland"
] }
avian3d = "0.4"
rand = "0.9.2"
r2r = "0.9.5"
crossbeam-channel = "0.5.15"
image = "0.25.8"
futures = "0.3"